@@ -34,6 +34,16 @@ of the subwindows by dragging the sash between panes.
 Specifies the orientation of the window.
 If \fBvertical\fR, subpanes are stacked top-to-bottom;
 if \fBhorizontal\fR, subpanes are stacked left-to-right.
+.OP \-width width Width
+If present and greater than zero, 
+specifies the desired width of the widget in pixels.
+Otherwise, the requested width is determined by the width
+of the managed windows.
+.OP \-height height Height
+If present and greater than zero, 
+specifies the desired height of the widget in pixels.
+Otherwise, the requested height is determined by the height
+of the managed windows.
 
 .SH "PANE OPTIONS"
 The following options may be specified for each pane:
@@ -71,15 +81,19 @@ If no \fI-option\fR is specified, returns a dictionary of the pane
 option values.
 If one \fI-option\fR is specified, returns the value of that \fIoption\fR.
 Otherwise, sets the \fI-option\fRs to the corresponding \fIvalue\fRs.
-
-.SH "INTERNAL ROUTINES"
-The following routines are used internally by the \fBpaned\fR widget
-binding code.
 .TP
 \fIpathname\fR \fBsashpos\fR \fIindex\fR ?\fInewpos\fR?
-If \fInewpos\fR is specified, sets the sash position 
-(subject to constraints).
-Returns the position of sash number \fIindex\fR.
+If \fInewpos\fR is specified, sets the position 
+of sash number \fIindex\fR.
+May adjust the positions of adjacent sashes
+to ensure that positions are monotonically increasing.
+Sash positions are further constrained to be between 0 
+and the total size of the widget.
+.\" Full story: "total size" is either the -height (resp -width),
+.\" or the actual window height (resp actual window width),
+.\" depending on which changed most recently.
+Returns the new position of sash number \fIindex\fR.
+.\" Full story: new position may be different than the requested position.
 .TP
 \fIpathname\fR \fBidentify\fR \fIx y\fR
 Returns the index of the sash at point \fIx,y\fR,
