@@ -1,3 +1,12 @@
+2007-06-09  Joe English  <jenglish@users.sourceforge.net>
+
+	* generic/ttk/ttkPanedwindow.c, doc/ttk_panedwindow.n,
+	tests/ttk/panedwindow.test: Added -width and -height options.
+	Added 'panes' method, return list of managed windows.
+	'sashpos' method is now documented as part of the public
+	interface, and details clarified.  Should be easier 
+	to set initial sash positions now [Alleviates #1659067].
+
 2007-06-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tkWinWm.c (WmIconphotoCmd): fix wm iconphoto RGBA issues.
